--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,12 @@
     "homepage": "https://github.com/carropublic/myinfo",
     "keywords": ["Laravel", "MyInfo"],
     "require": {
-        "illuminate/support": "~5|~6|~7|~8",
-        "spomky-labs/jose": "^7.1"
+        "illuminate/support": "~5|~6|~7|~8|~9|~10",
+        "web-token/jwt-core": "^3.2",
+        "guzzlehttp/guzzle": "^7.4.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.0",
-        "mockery/mockery": "^1.1",
-        "orchestra/testbench": "~3.0",
-        "sempro/phpunit-pretty-print": "^1.0",
+        "phpunit/phpunit": "^9.3.8",
         "squizlabs/php_codesniffer": "^3.3"
     },
     "autoload": {
@@ -40,6 +38,11 @@
             "aliases": {
                 "MyInfo": "CarroPublic\\MyInfo\\Facades\\MyInfo"
             }
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "kylekatarnls/update-helper": true
         }
     }
 }
